@@ -6,6 +6,8 @@
 {% block extra_css %}
     {{ block.super }}
 
+    {{ form_media.css }}
+
     <link rel="stylesheet" href="{% static 'wagtaildocs/css/add-multiple.css' %}" type="text/css" />
 {% endblock %}
 
@@ -66,6 +68,8 @@
 
 {% block extra_js %}
     {{ block.super }}
+
+    {{ form_media.js }}
 
     <!-- this exact order of plugins is vital -->
     <script src="{% static 'wagtailadmin/js/vendor/jquery.iframe-transport.js' %}"></script>
