@@ -937,8 +937,10 @@ class CustomRenditionWithAuthor(AbstractRendition):
 
 class CustomDocument(AbstractDocument):
     description = models.TextField(blank=True)
+    fancy_description = RichTextField(blank=True)
     admin_form_fields = Document.admin_form_fields + (
         'description',
+        'fancy_description'
     )
 
 
